# tezkernels

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile.toml  README.md  build  dune  flake.nix
00_debug_kernel/: Cargo.toml  README.md  commands.json  inputs.json
00_debug_kernel/.cargo/: config
00_debug_kernel/src/: lib.rs
01_counter_kernel/: Cargo.toml
01_counter_kernel/src/: counter.rs  lib.rs
01_storage_kernel/: Cargo.toml  README.md
01_storage_kernel/src/: lib.rs
09_tzwitter_app/: deploy.sh
09_tzwitter_app/app/src/lib/: tzwitter.ts
09_tzwitter_app/kernel/: Cargo.toml
09_tzwitter_app/kernel/src/: lib.rs  stages.rs  storage.rs
09_tzwitter_app/kernel/src/core/: error.rs  public_key.rs  signature.rs
0n_counter_kernel/src/: counter.rs  lib.rs
counter_kernel/: Cargo.toml  README.md  inputs.json
counter_kernel/src/: counter.rs  lib.rs
counter_kernel/wasm/: counter_kernel.wasm
debug_kernel/: Cargo.toml  README.md  commands.json  inputs.json
debug_kernel/src/: lib.rs
doc/: how-to-debug-kernels.md  how-to-install-kernel.md  how-to-installer-kernel.md  how-to-mondaynet.md  how-to-soru.md
doc/installer_kernel/: installer.hex
doc/installer_kernel/wasm_2_0_0/: scrrh12oYb5M6xm5nwpaxosYwNxV5zQKU3UbECfu5NEGRwdodX43LTGP  scrrh12oprttN1dy8KebdfPtyZctZQGkhsBcQQ4E8uXhJct9Q7RR8tpC  scrrh12qNi86KAjT5CMpAcDb7W1UXrXHNevzgDcGyPEPkLLaB9YqEvT1  scrrh12qYVD5YjGB8ETPhXvGNUVpn7ucpUhA6bwz94ZWgnhAjDHtLJQ7  scrrh12vuZUfNnGh7Bg3Qfn6XmDLoxcNCSEVxsD3v7f3QdQTWuSwjbH6  scrrh133pBdoqd9HGrc3Sb2yo6gcrn8XfC4vooWy6AXgtK9VQE2SaVJX  scrrh1356KJuZMLo1xqVCyUrdSrWCy4MNsTbuLu2GFYURHiy4eReW45u  scrrh136YoqaVGtVFGefabgtZWHeKdk8gvFBZxGRG8pUGZpSc1cvnLC5  scrrh136y9FEv1DT5oRoZH2Mpuu1s6rBNZwtB7aqAAcxQBSoQY4D3wXY  scrrh13AkaH4bWcxN17EcT7co4wmqVjmeMrdJgADTuo8ZgdEy2X4Fc8U  scrrh13C7s3St11qFkVYsejkfUh8uHJC4qiHALpDAFVDycDmbEoSQiqE  scrrh13CCnVKmqhgynDxBoRuBYc64AThKGe2fAYjUz1jkU3JkMnLCHQB  scrrh13DoFZmoC3fJfESk2bQ13XofoZmyGimgha4VqjneWfwoHJUCqSw  scrrh13FPW5JmBa1BJ1NEGaaLExVbtLTACJfSq2QYQCiSC6NP5gfGHK6  scrrh13LuaUk9nJmKtQjjTTvtqHn1xzQYAUW6LyMPuQ9sRur5NQ6HRn3  scrrh13LxWtUWSkBX1coAqX9FaSzgLVyYyjLWHVCNGDUfLZSWBrsiSpL  scrrh13PMm5GTSD9zQDvKJNioNCt6jWcNLQAzBmRBemWqCknDNLhbmNn  scrrh13QWDKSZxJF4F4TGcXFhYVQFZBTPiNsYTt1WYCen9VqbWyMVDLA  scrrh13SPkihmYPbhYadvxhXZfCcQi3iyDSkzAHD8ogW6yiHB1N7mda8  scrrh13V3NaPRjLgCa3CBJUZDqiDk4bzBeQwCyibHcidgdNATSw8cK8u  scrrh13VA3QApuYpAq9w8AH9RpFGR43RzeRWdCVPALJBR61uzqQ4o2ts  scrrh13XvvZMr5PbS7T6xTXSwnZwwSeMEmiTASJQQbWMXcZN1S84vGEt  scrrh13Yfui1r511ELPodiVvxCFZyXWr7ZdC2KFWgDg86vYDeku8UwnR  scrrh13bSd1xYKi9Gv9xd1xvAfvebFYCqYbRrVHDDFnuNv76zoc7nY4R  scrrh13chXkaCUNpBDFMSkq6DRKvBHoysvJ6TBogK2TPtTSqGWf7Bc5V  scrrh13ejaEPxF3kwsnM1DWZvY7GEB34byFfyctD6MYcWBQ8ZpHFzyAA  scrrh13etot5aSg7mK1cj7XGG1QhNBJKpJrFKMHr4Lh8sBtxB9dzBEuh  scrrh13guuYMsAAa1KEd8UAawxKGeuuQwEvXK5hEFopZWT9aWXdzsoZW  scrrh13n2bicNCsbDNeAj4NsVxr3NDffGxVZYbXShecN2Ar8ckudPaAe  scrrh13og5ToqwQiDa2wduSMZSpq5w4ygLjmU5WaG8JM9AZCkSBZSFkE  scrrh13qQLPq7Wj2GGhL71zkHph4NJm4RdzzNUBaWF8HnSDAvqD8982u  scrrh13rVfi51XsjjTryLDwesg5RHCnw2vqjL67ovZepwNTCJwqR9Yys  scrrh13rwxttycWQd9JEXPrfoWhJHrjSxzKRP1gk2T3DhZeRcSuKs2Rk  scrrh13sv81Vp1H8ijpYLJiLw3yUyMaABquaqY6C44Vdhoa1KsimBAji  scrrh13w1RAVuRP7tHPDkKPAxU24iEfEggRVz79jhhnHV4rD14ynzLnn  scrrh13w9SbfgyKogaWE5v74THLCVSmy7ruwpwqZe9WBq11kcsxFk9pK  scrrh13wBMtG7oS9zxDBvz5zsev59Q1uUVq7upncEKgcXsbAd9oiV1ki  scrrh13yPcWTSh8WTdV57wZ1gm3V9fi8HacjCMU9bDxNyy6npsUJDUUQ  scrrh142QuKmuhyHER2XAgNoMtF1hf8hAVydjrQ9zXtHXEUyCneSU2iK  scrrh143gucA9XhgMs81HDp1u4eFSM2uimoP1MW9qAyMBUQVc6YdJdwy  (+15 more)
hello_kernel/: Cargo.toml  build.rs
hello_kernel/schema/: hello.capnp
hello_kernel/src/: lib.rs  schema.rs
l1_installer/: Cargo.toml
l1_installer/src/: lib.rs
nix/: outbox-daemon.nix
outbox-daemon/: dune
output_kernel/: Cargo.toml  README.md
output_kernel/src/: lib.rs
sequencer/: Cargo.toml  readme.md
sequencer/src/: main.rs
test_counter_kernel/: Cargo.toml
test_counter_kernel/src/: lib.rs
