[workspace]

members = [
    "00_debug_kernel",
    "01_storage_kernel",
    "0n_counter_kernel",
    "09_tzwitter_app/kernel"
    # Disabled for now, because it doesn't compile.
    # "hello_kernel",
    # "output_kernel",
]

# FIXME: what is this? Do we need it?
[profile.release]
lto = true
opt-level = 's'
