[package]
name = "debug-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
greeter = []

[dependencies]
# Let's use the last version of the SDK, todo: fix the version if it's an issue
# host = { git = "https://gitlab.com/tezos/kernel/" } 
# debug = { git = "https://gitlab.com/tezos/kernel/" }
# kernel = {git = "https://gitlab.com/tezos/kernel/"}
# mock_runtime = { git = "https://gitlab.com/tezos/kernel/" }
# mock_host = { git = "https://gitlab.com/tezos/kernel/" }

[dependencies.tezos_smart_rollup_core]
git = "https://gitlab.com/tezos/tezos"

[dependencies.tezos_smart_rollup_host]
git = "https://gitlab.com/tezos/tezos"

[dependencies.tezos_smart_rollup_debug]
git = "https://gitlab.com/tezos/tezos"

[dependencies.tezos_smart_rollup_encoding]
git = "https://gitlab.com/tezos/tezos"

[dependencies.tezos_smart_rollup_storage]
git = "https://gitlab.com/tezos/tezos"

[dependencies.tezos_smart_rollup_entrypoint]
git = "https://gitlab.com/tezos/tezos"

[dependencies.tezos_smart_rollup_mock]
git = "https://gitlab.com/tezos/tezos"
