[package]
name = "debug-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tezos_smart_rollup_core = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_host = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_debug = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_encoding = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_storage = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_entrypoint = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_mock = { git = "https://gitlab.com/tezos/tezos" }
