[package]
name = "counter-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
host = { git = "https://gitlab.com/tezos/kernel/" }
debug = { git = "https://gitlab.com/tezos/kernel/" }
kernel = {git = "https://gitlab.com/tezos/kernel/"}

# TODO use tx-kernel atm for memory and others
kernel-core = { git = "https://gitlab.com/tezos/kernel/" }

tezos_encoding = { git = "https://github.com/emturner/tezedge.git", branch = "master" }

anyhow = "1"

[features]
counter-kernel = []
counter = ["counter-kernel"]
