[package]
name = "debug-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
host = { git = "https://gitlab.com/tezos/kernel/", default-features = false}
debug = { git = "https://gitlab.com/tezos/kernel/" }
kernel = {git = "https://gitlab.com/tezos/kernel/", default-features = false}
mock_runtime = { git = "https://gitlab.com/tezos/kernel/", default-features = false}

[features]
default = []
debug-kernel = []
no-alloc = []
write-debug = ["debug-kernel", "no-alloc"]
