[package]
name = "hello-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
capnpc = "0.15"

[dependencies]
anyhow = "1"
host = { git = "https://gitlab.com/tezos/kernel/" }
kernel = {git = "https://gitlab.com/tezos/kernel/", default-features = false}
mock_runtime = { git = "https://gitlab.com/tezos/kernel/" }
capnp = "0.15"
