[package]
name = "l1-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
host = { git = "https://gitlab.com/tezos/kernel/" }
debug = { git = "https://gitlab.com/tezos/kernel/" }
kernel = {git = "https://gitlab.com/tezos/kernel/"}
kernel-core = {git = "https://gitlab.com/tezos/kernel/", default-features = false }
tezos_encoding = { git = "https://github.com/emturner/tezedge.git", branch = "master" }

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dev-dependencies]
mock_runtime = { git = "https://gitlab.com/tezos/kernel/" }
wasm-bindgen-test = "0.3.0"