[package]
name = "test-counter-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
host = { git = "https://gitlab.com/tezos/kernel/" }
debug = { git = "https://gitlab.com/tezos/kernel/" }
kernel = {git = "https://gitlab.com/tezos/kernel/"}
# TODO use tx-kernel atm for memory and others
kernel-core = { git = "https://gitlab.com/tezos/kernel/" }
counter-kernel = {path = "../counter_kernel"}

# mock mode
mock_runtime = { git = "https://gitlab.com/tezos/kernel/" }
mock_host = { git = "https://gitlab.com/tezos/kernel/" }

anyhow = "1"

crypto = { git = "https://github.com/emturner/tezedge.git", branch = "master", default-features = false, features = ["no_sodium"] }
tezos_encoding = { git = "https://github.com/emturner/tezedge.git", branch = "master" }

[features]
testing = []
