[package]
name = "tzwitter-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Let's use the last version of the SDK, todo: fix the version if it's an issue
tezos_smart_rollup_core = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_host = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_debug = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_encoding = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_storage = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_entrypoint = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_mock = { git = "https://gitlab.com/tezos/tezos" }
tezos_data_encoding = "0.4.4"

# To hash everything
ed25519-compact = { version ="2.0", default-features = false }
tezos_crypto_rs = { version = "0.4", default-features = false }

serde = "1.0.152"
serde-json-wasm = "0.5.0"
num-bigint = "0.3"

[dev-dependencies]
hex = "0.4.3"
